[gd_scene load_steps=18 format=4 uid="uid://de37i4cxvbtmp"]

[ext_resource type="Script" uid="uid://bw1o8ejqok83s" path="res://Script/Map/library.gd" id="1_j4rjg"]
[ext_resource type="Texture2D" uid="uid://b0jljx17trjh0" path="res://Sprite/bg/library_tiled.png" id="2_c7br7"]
[ext_resource type="AudioStream" uid="uid://bconj8ksnduxy" path="res://Audio/BGM/Bgm_001_001_Loop.ogg" id="3_vxtdk"]
[ext_resource type="PackedScene" uid="uid://sovqp5lflgev" path="res://Scene/Player.tscn" id="4_ll7gk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sjtuv"]
texture = ExtResource("2_c7br7")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(48, 48)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:3/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:2/0 = 0
1:1/0 = 0
1:2/0 = 0
2:1/0 = 0
2:2/0 = 0
1:0/0 = 0
6:4/0 = 0
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
7:4/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:1/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_cvq6i"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_sjtuv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6tx0c"]
texture = ExtResource("2_c7br7")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(48, 48)
9:0/0 = 0
9:0/0/y_sort_origin = -18
9:1/0 = 0
9:2/0 = 0
8:3/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 20.3924, -24, 20.0737, 24, -24, 24)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18.6276, -24, 24, -24, 24, 24, -18.6276, 24)
8:0/size_in_atlas = Vector2i(1, 3)
8:0/0 = 0
8:0/0/y_sort_origin = 15
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 6.83463, 24, 6.69125, 24.0111, 43.1661, -24.0111, 43.1661)

[sub_resource type="TileSet" id="TileSet_0to5b"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6tx0c")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fv4w7"]
texture = ExtResource("2_c7br7")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(48, 48)
4:3/0 = 0
3:3/0 = 0
8:3/0 = 0
9:2/0 = 0
9:1/0 = 0

[sub_resource type="TileSet" id="TileSet_fvag4"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetAtlasSource_fv4w7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqx25"]
size = Vector2(48, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4rjg"]
size = Vector2(43.3125, 28.5)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_c7br7"]
polygon = PackedVector2Array(0, 0, 200, 0, 100, 264)

[sub_resource type="Gradient" id="Gradient_c7br7"]
offsets = PackedFloat32Array(0.012987, 0.811688)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vxtdk"]
gradient = SubResource("Gradient_c7br7")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.916667, 0.0833333)
metadata/_snap_enabled = true
metadata/_snap_count = 12

[sub_resource type="Gradient" id="Gradient_vxtdk"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ll7gk"]
gradient = SubResource("Gradient_vxtdk")
fill_from = Vector2(0.5, 0.8)
fill_to = Vector2(0.5, 0.2)
metadata/_snap_enabled = true

[node name="Library" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_j4rjg")

[node name="TileMap" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-24, 0)

[node name="BaseTileMapLayer" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAAAAAAAAAHAAIAAAAAAAEAAAAHAAIAAAAAAAIAAAAHAAIAAAAAAAMAAAAHAAIAAAAAAAQAAAAHAAIAAAAAAAUAAAAHAAIAAAAAAAYAAAAHAAIAAAAAAAcAAAAHAAIAAAAAAAgAAAAHAAIAAAAAAAkAAAAHAAIAAAAAAAoAAAAHAAIAAAAAAAsAAAAHAAIAAAAAAAwAAAAHAAIAAAAAAA0AAAAHAAIAAAAAAA4AAAAHAAIAAAAAAA8AAAAHAAIAAAAAABAAAAAHAAIAAAAAABEAAAAHAAIAAAAAABIAAAAHAAIAAAAAABMAAAAHAAIAAAAAABQAAAAHAAIAAAABAAAAAAAHAAIAAAABAAEAAAAHAAIAAAABAAIAAAAHAAIAAAABAAMAAAAHAAIAAAABAAQAAAAHAAIAAAABAAUAAAAHAAIAAAABAAYAAAAHAAIAAAABAAcAAAAHAAIAAAABAAgAAAAHAAIAAAABAAkAAAAHAAIAAAABAAoAAAAHAAIAAAABAAsAAAAHAAIAAAABAAwAAAAHAAIAAAABAA0AAAAHAAIAAAABAA4AAAAHAAIAAAABAA8AAAAHAAIAAAABABAAAAAHAAIAAAABABEAAAAHAAIAAAABABIAAAAHAAIAAAABABMAAAAHAAIAAAABABQAAAAHAAIAAAACAAAAAAAFAAQAAAACAAEAAAABAAQAAAACAAIAAAABAAQAAAACAAMAAAABAAQAAAACAAQAAAABAAQAAAACAAUAAAABAAQAAAACAAYAAAABAAQAAAACAAcAAAABAAQAAAACAAgAAAABAAQAAAACAAkAAAABAAQAAAACAAoAAAABAAQAAAACAAsAAAABAAQAAAACAAwAAAABAAQAAAACAA0AAAABAAQAAAACAA4AAAABAAQAAAACAA8AAAABAAQAAAACABAAAAABAAQAAAACABEAAAABAAQAAAACABIAAAABAAQAAAACABMAAAABAAQAAAACABQAAAADAAQAAAADAAAAAAAAAAMAAAADAAEAAAAJAAMAAAADAAIAAAAJAAMAAAADAAMAAAACAAMAAAADAAQAAAACAAMAAAADAAUAAAACAAMAAAADAAYAAAACAAMAAAADAAcAAAACAAMAAAADAAgAAAACAAMAAAADAAkAAAACAAMAAAADAAoAAAACAAMAAAADAAsAAAACAAMAAAADAAwAAAACAAMAAAADAA0AAAACAAMAAAADAA4AAAACAAMAAAADAA8AAAACAAMAAAADABAAAAAGAAQAAAADABEAAAAGAAQAAAADABIAAAAGAAQAAAADABMAAAAGAAQAAAADABQAAAABAAMAAAAEAAAAAAAAAAMAAAAEAAEAAAAJAAMAAAAEAAIAAAAJAAMAAAAEAAMAAAACAAMAAAAEAAQAAAACAAMAAAAEAAUAAAACAAMAAAAEAAYAAAACAAMAAAAEAAcAAAACAAMAAAAEAAgAAAACAAMAAAAEAAkAAAACAAMAAAAEAAoAAAACAAMAAAAEAAsAAAACAAMAAAAEAAwAAAACAAMAAAAEAA0AAAACAAMAAAAEAA4AAAACAAMAAAAEAA8AAAACAAMAAAAEABAAAAACAAMAAAAEABEAAAAGAAQAAAAEABIAAAAGAAQAAAAEABMAAAAGAAQAAAAEABQAAAABAAMAAAAFAAAAAAAAAAMAAAAFAAEAAAAJAAMAAAAFAAIAAAAJAAMAAAAFAAMAAAACAAMAAAAFAAQAAAACAAMAAAAFAAUAAAACAAMAAAAFAAYAAAACAAMAAAAFAAcAAAACAAMAAAAFAAgAAAACAAMAAAAFAAkAAAACAAMAAAAFAAoAAAACAAMAAAAFAAsAAAACAAMAAAAFAAwAAAACAAMAAAAFAA0AAAACAAMAAAAFAA4AAAACAAMAAAAFAA8AAAACAAMAAAAFABAAAAACAAMAAAAFABEAAAAGAAQAAAAFABIAAAAGAAQAAAAFABMAAAAGAAQAAAAFABQAAAABAAMAAAAGAAAAAAAAAAMAAAAGAAEAAAAJAAMAAAAGAAIAAAAJAAMAAAAGAAMAAAACAAMAAAAGAAQAAAACAAMAAAAGAAUAAAACAAMAAAAGAAYAAAACAAMAAAAGAAcAAAACAAMAAAAGAAgAAAACAAMAAAAGAAkAAAACAAMAAAAGAAoAAAACAAMAAAAGAAsAAAACAAMAAAAGAAwAAAACAAMAAAAGAA0AAAACAAMAAAAGAA4AAAACAAMAAAAGAA8AAAACAAMAAAAGABAAAAACAAMAAAAGABEAAAAGAAQAAAAGABIAAAAGAAQAAAAGABMAAAAGAAQAAAAGABQAAAABAAMAAAAHAAAAAAAAAAMAAAAHAAEAAAAFAAMAAAAHAAIAAAAJAAMAAAAHAAMAAAACAAMAAAAHAAQAAAACAAMAAAAHAAUAAAACAAMAAAAHAAYAAAACAAMAAAAHAAcAAAACAAMAAAAHAAgAAAACAAMAAAAHAAkAAAACAAMAAAAHAAoAAAACAAMAAAAHAAsAAAACAAMAAAAHAAwAAAACAAMAAAAHAA0AAAACAAMAAAAHAA4AAAACAAMAAAAHAA8AAAACAAMAAAAHABAAAAACAAMAAAAHABEAAAAGAAQAAAAHABIAAAAGAAQAAAAHABMAAAAGAAQAAAAHABQAAAAJAAQAAAAIAAAAAAAAAAMAAAAIAAEAAAAGAAMAAAAIAAIAAAAJAAMAAAAIAAMAAAACAAMAAAAIAAQAAAACAAMAAAAIAAUAAAACAAMAAAAIAAYAAAACAAMAAAAIAAcAAAACAAMAAAAIAAgAAAACAAMAAAAIAAkAAAACAAMAAAAIAAoAAAACAAMAAAAIAAsAAAACAAMAAAAIAAwAAAACAAMAAAAIAA0AAAACAAMAAAAIAA4AAAACAAMAAAAIAA8AAAACAAMAAAAIABAAAAACAAMAAAAIABEAAAAGAAQAAAAIABIAAAAGAAQAAAAIABMAAAAGAAQAAAAIABQAAAAHAAQAAAAJAAAAAAAAAAMAAAAJAAEAAAAHAAMAAAAJAAIAAAAJAAMAAAAJAAMAAAACAAMAAAAJAAQAAAACAAMAAAAJAAUAAAACAAMAAAAJAAYAAAACAAMAAAAJAAcAAAACAAMAAAAJAAgAAAACAAMAAAAJAAkAAAACAAMAAAAJAAoAAAACAAMAAAAJAAsAAAACAAMAAAAJAAwAAAACAAMAAAAJAA0AAAACAAMAAAAJAA4AAAACAAMAAAAJAA8AAAACAAMAAAAJABAAAAACAAMAAAAJABEAAAAGAAQAAAAJABIAAAAGAAQAAAAJABMAAAAGAAQAAAAJABQAAAAIAAQAAAAKAAAAAAAAAAMAAAAKAAEAAAAJAAMAAAAKAAIAAAAJAAMAAAAKAAMAAAACAAMAAAAKAAQAAAACAAMAAAAKAAUAAAACAAMAAAAKAAYAAAACAAMAAAAKAAcAAAACAAMAAAAKAAgAAAACAAMAAAAKAAkAAAACAAMAAAAKAAoAAAACAAMAAAAKAAsAAAACAAMAAAAKAAwAAAACAAMAAAAKAA0AAAACAAMAAAAKAA4AAAACAAMAAAAKAA8AAAACAAMAAAAKABAAAAACAAMAAAAKABEAAAAGAAQAAAAKABIAAAAGAAQAAAAKABMAAAAGAAQAAAAKABQAAAABAAMAAAALAAAAAAAAAAMAAAALAAEAAAAJAAMAAAALAAIAAAAJAAMAAAALAAMAAAACAAMAAAALAAQAAAACAAMAAAALAAUAAAACAAMAAAALAAYAAAACAAMAAAALAAcAAAACAAMAAAALAAgAAAACAAMAAAALAAkAAAACAAMAAAALAAoAAAACAAMAAAALAAsAAAACAAMAAAALAAwAAAACAAMAAAALAA0AAAACAAMAAAALAA4AAAACAAMAAAALAA8AAAACAAMAAAALABAAAAACAAMAAAALABEAAAAGAAQAAAALABIAAAAGAAQAAAALABMAAAAGAAQAAAALABQAAAABAAMAAAAMAAAAAAAAAAMAAAAMAAEAAAAJAAMAAAAMAAIAAAAJAAMAAAAMAAMAAAACAAMAAAAMAAQAAAACAAMAAAAMAAUAAAACAAMAAAAMAAYAAAACAAMAAAAMAAcAAAACAAMAAAAMAAgAAAACAAMAAAAMAAkAAAACAAMAAAAMAAoAAAACAAMAAAAMAAsAAAACAAMAAAAMAAwAAAACAAMAAAAMAA0AAAACAAMAAAAMAA4AAAACAAMAAAAMAA8AAAACAAMAAAAMABAAAAACAAMAAAAMABEAAAAGAAQAAAAMABIAAAAGAAQAAAAMABMAAAAGAAQAAAAMABQAAAABAAMAAAANAAAAAAAAAAMAAAANAAEAAAAJAAMAAAANAAIAAAAJAAMAAAANAAMAAAACAAMAAAANAAQAAAACAAMAAAANAAUAAAACAAMAAAANAAYAAAACAAMAAAANAAcAAAACAAMAAAANAAgAAAACAAMAAAANAAkAAAACAAMAAAANAAoAAAACAAMAAAANAAsAAAACAAMAAAANAAwAAAACAAMAAAANAA0AAAACAAMAAAANAA4AAAACAAMAAAANAA8AAAACAAMAAAANABAAAAACAAMAAAANABEAAAAGAAQAAAANABIAAAAGAAQAAAANABMAAAAGAAQAAAANABQAAAABAAMAAAAOAAAAAAAEAAQAAAAOAAEAAAAAAAQAAAAOAAIAAAAAAAQAAAAOAAMAAAAAAAQAAAAOAAQAAAAAAAQAAAAOAAUAAAAAAAQAAAAOAAYAAAAAAAQAAAAOAAcAAAAAAAQAAAAOAAgAAAAAAAQAAAAOAAkAAAAAAAQAAAAOAAoAAAAAAAQAAAAOAAsAAAAAAAQAAAAOAAwAAAAAAAQAAAAOAA0AAAAAAAQAAAAOAA4AAAAAAAQAAAAOAA8AAAAAAAQAAAAOABAAAAAAAAQAAAAOABEAAAAAAAQAAAAOABIAAAAAAAQAAAAOABMAAAAAAAQAAAAOABQAAAACAAQAAAAPAAAAAAAHAAIAAAAPAAEAAAAHAAIAAAAPAAIAAAAHAAIAAAAPAAMAAAAHAAIAAAAPAAQAAAAHAAIAAAAPAAUAAAAHAAIAAAAPAAYAAAAHAAIAAAAPAAcAAAAHAAIAAAAPAAgAAAAHAAIAAAAPAAkAAAAHAAIAAAAPAAoAAAAHAAIAAAAPAAsAAAAHAAIAAAAPAAwAAAAHAAIAAAAPAA0AAAAHAAIAAAAPAA4AAAAHAAIAAAAPAA8AAAAHAAIAAAAPABAAAAAHAAIAAAAPABEAAAAHAAIAAAAPABIAAAAHAAIAAAAPABMAAAAHAAIAAAAPABQAAAAHAAIAAAAQAAAAAAAHAAIAAAAQAAEAAAAHAAIAAAAQAAIAAAAHAAIAAAAQAAMAAAAHAAIAAAAQAAQAAAAHAAIAAAAQAAUAAAAHAAIAAAAQAAYAAAAHAAIAAAAQAAcAAAAHAAIAAAAQAAgAAAAHAAIAAAAQAAkAAAAHAAIAAAAQAAoAAAAHAAIAAAAQAAsAAAAHAAIAAAAQAAwAAAAHAAIAAAAQAA0AAAAHAAIAAAAQAA4AAAAHAAIAAAAQAA8AAAAHAAIAAAAQABAAAAAHAAIAAAAQABEAAAAHAAIAAAAQABIAAAAHAAIAAAAQABMAAAAHAAIAAAAQABQAAAAHAAIAAAA=")
tile_set = SubResource("TileSet_cvq6i")

[node name="ObjectTileMapLayer" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAADAAcAAAAJAAAAAAADAAgAAAACAAAAAAADAAkAAAAJAAAAAAADAA0AAAAJAAAAAAADAA4AAAACAAAAAAADAA8AAAAJAAAAAAAFAAcAAAAJAAAAAAAFAAgAAAAEAAAAAAAFAAkAAAAJAAAAAAAFAA0AAAAJAAAAAAAFAA4AAAAEAAAAAAAFAA8AAAAJAAAAAAALAAcAAAAJAAAAAAALAAgAAAACAAAAAAALAAkAAAAJAAAAAAALAA0AAAAJAAAAAAALAA4AAAACAAAAAAALAA8AAAAJAAAAAAANAAcAAAAJAAAAAAANAAgAAAAEAAAAAAANAAkAAAAJAAAAAAANAA0AAAAJAAAAAAANAA4AAAAEAAAAAAANAA8AAAAJAAAAAAAEAAgAAAADAAAAAAAEAA4AAAADAAAAAAAMAAgAAAADAAAAAAAMAA4AAAADAAAAAAADAAUAAAAIAAAAAAAEAAUAAAAIAAAAAAAFAAUAAAAIAAAAAAAGAAUAAAAIAAAAAAADAAIAAAAIAAAAAAAEAAIAAAAIAAAAAAAFAAIAAAAIAAAAAAAGAAIAAAAIAAAAAAAHAAIAAAAIAAAAAAAIAAIAAAAIAAAAAAAJAAIAAAAIAAAAAAAKAAIAAAAIAAAAAAALAAIAAAAIAAAAAAAMAAIAAAAIAAAAAAANAAIAAAAIAAAAAAAKAAUAAAAIAAAAAAALAAUAAAAIAAAAAAAMAAUAAAAIAAAAAAANAAUAAAAIAAAAAAADAAsAAAAIAAAAAAAEAAsAAAAIAAAAAAAFAAsAAAAIAAAAAAAGAAsAAAAIAAAAAAAKAAsAAAAIAAAAAAALAAsAAAAIAAAAAAAMAAsAAAAIAAAAAAANAAsAAAAIAAAAAAAKABEAAAAIAAAAAAALABEAAAAIAAAAAAAMABEAAAAIAAAAAAANABEAAAAIAAAAAAAGABEAAAAIAAAAAAAFABEAAAAIAAAAAAAEABEAAAAIAAAAAAADABEAAAAIAAAAAAA=")
tile_set = SubResource("TileSet_0to5b")

[node name="ObjectTileMapLayer2" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAHAAsAAAAJAAIAAAAJAAsAAAAJAAEAAAAJAAUAAAAJAAEAAAAHAAUAAAAJAAIAAAAFAAgAAAAEAAMAAAALAA4AAAADAAMAAAAHABEAAAAJAAIAAAAJABEAAAAJAAEAAAA=")
tile_set = SubResource("TileSet_fvag4")

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
position = Vector2(-41, -19)
stream = ExtResource("3_vxtdk")
autoplay = true

[node name="Player" parent="." instance=ExtResource("4_ll7gk")]
y_sort_enabled = true
position = Vector2(384, 216)

[node name="Classroom" type="Area2D" parent="."]
position = Vector2(383, 969)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Classroom"]
position = Vector2(0, 29)
shape = SubResource("RectangleShape2D_dqx25")

[node name="InteractableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Interactable" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(527, 703)
shape = SubResource("RectangleShape2D_j4rjg")

[node name="Light" type="Node2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Light"]
position = Vector2(111, 42)
occluder = SubResource("OccluderPolygon2D_c7br7")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Light"]
position = Vector2(457, 40)
occluder = SubResource("OccluderPolygon2D_c7br7")

[node name="pointlight" type="Node2D" parent="Light"]

[node name="PointLight2D" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(320, 259)
scale = Vector2(2.54004, 2.47387)
color = Color(0.862745, 0.662745, 0.247059, 1)
energy = 1.61
shadow_enabled = true
texture = SubResource("GradientTexture2D_vxtdk")

[node name="PointLight2D2" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(448, 259)
scale = Vector2(2.54004, 2.47387)
color = Color(0.862745, 0.662745, 0.247059, 1)
energy = 1.61
shadow_enabled = true
texture = SubResource("GradientTexture2D_vxtdk")

[node name="PointLight2D3" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(320, 547)
scale = Vector2(2.54004, 2.47387)
color = Color(0.862745, 0.662745, 0.247059, 1)
energy = 1.61
shadow_enabled = true
texture = SubResource("GradientTexture2D_vxtdk")

[node name="PointLight2D4" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(448, 547)
scale = Vector2(2.54004, 2.47387)
color = Color(0.862745, 0.662745, 0.247059, 1)
energy = 1.61
shadow_enabled = true
texture = SubResource("GradientTexture2D_vxtdk")

[node name="PointLight2D5" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(319, 834)
scale = Vector2(2.54004, 2.47387)
color = Color(0.862745, 0.662745, 0.247059, 1)
energy = 1.61
shadow_enabled = true
texture = SubResource("GradientTexture2D_vxtdk")

[node name="PointLight2D6" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(448, 834)
scale = Vector2(2.54004, 2.47387)
color = Color(0.862745, 0.662745, 0.247059, 1)
energy = 1.61
shadow_enabled = true
texture = SubResource("GradientTexture2D_vxtdk")

[node name="PointLight2D7" type="PointLight2D" parent="Light/pointlight"]
position = Vector2(382.5, 164.5)
scale = Vector2(4.89063, 3.54688)
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.5
texture = SubResource("GradientTexture2D_ll7gk")

[connection signal="body_entered" from="Classroom" to="." method="_on_classroom_body_entered"]
[connection signal="body_exited" from="Classroom" to="." method="_on_classroom_body_exited"]
[connection signal="area_entered" from="InteractableArea" to="." method="_on_interactable_area_entered"]
[connection signal="area_exited" from="InteractableArea" to="." method="_on_interactable_area_exited"]
